--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Dependencies
 node_modules/
-*/node_modules/
 
 # Environment variables
 .env
@@ -10,38 +9,17 @@ node_modules/
 .env.production.local
 
 # Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Runtime data
-pids
 *.pid
 *.seed
-*.pid.lock
 
-# Coverage directory used by tools like istanbul
+# Coverage directory
 coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
 
 # IDE
 .vscode/
@@ -51,4 +29,11 @@ jspm_packages/
 .DS_Store
 Thumbs.db
 
+# Build output
+dist/
+build/
+
+# Temporary files
+.tmp/
+.cache/
 .cache_ggshield
