--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,13 @@
   "description": "Taskly: A task management app built with Node.js and Express",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0"
   },
   "devDependencies": {
