Frontend + Backend Done

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "framer-motion": "^12.23.0",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.59.0",
