--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   },
   "author": "Aaditya Singhal",
   "license": "ISC",
-  "description": "Taskly: A task management app built with Node.js and Express",
+  "description": "Taskzy: A task management app built with Node.js and Express",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
