--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Dependencies
 node_modules/
+server/node_modules/
+client/node_modules/
 
 # Environment variables
 .env
+client/.env
+server/.env
 .env.local
 .env.development.local
 .env.test.local
