--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ client/node_modules/
 
 # Environment variables
 .env
+.env.production
 client/.env
+client/.env.production
 server/.env
 .env.local
 .env.development.local
